[UI] Resolve "Sidebar needs scrollbar"

--- a/deltafi-ui/src/styles/components/sidebar/app-menu.scss
+++ b/deltafi-ui/src/styles/components/sidebar/app-menu.scss
@@ -63,6 +63,11 @@
   }
 }
 
+.sidebar-scroller {
+  overflow-y: scroll;
+  padding-bottom: 80px;
+}
+
 @media (max-width: 768px) {
   .menu {
     width: 150px !important;
